--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -3614,8 +3614,8 @@ body {
 }
 
 .navbar .navbar-nav .nav-link:not(.btn) {
-    text-transform: uppercase;
-    font-size: 0.7142em;
+    text-transform: none;
+    font-size: 1em;
     padding: 0.5rem 0.7rem;
     line-height: 1.625rem;
 }
