--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,7 @@
   <!-- CSS Files -->
   <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="../assets/css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="../assets/css/demo.css" rel="stylesheet" />
+
   <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
   <style>
     pre.prettyprint {
@@ -109,7 +108,7 @@
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="index.html" rel="tooltip" data-placement="bottom" target="_self">
-            <i class="now-ui-icons education_glasses"></i>
+
                       GEEKTEQ
                   </a>
 
@@ -130,7 +129,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#pablo">
                                   <i class="now-ui-icons education_paper"></i>
-                                  <p>TutorConnect</p>
+                                  <p>Tutor Connect</p>
                               </a>
           </li>
           <li class="nav-item">
@@ -150,13 +149,13 @@
         <ul class="navbar-nav ">
           <li class="nav-item">
             <a class="nav-link" href="#pablo">
-                                  <i class="now-ui-icons "></i>
-                                  <p>login</p>
+                                  <i class="now-ui-icons users_circle-08"></i>
+                                  <p>Login</p>
                               </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link btn btn-neutral" href="https://www.creative-tim.com/product/now-ui-kit-pro" target="_blank">
-                            <i class="now-ui-icons arrows-1_share-66"></i>
+            <a class="nav-link btn btn-neutral" href="register.html " target="_blank ">
+                            <i class="now-ui-icons arrows-1_share-66 "></i>
                             <p>Signup</p>
                         </a>
           </li>
@@ -167,46 +166,41 @@
   </nav>
   <!-- End Navbar -->
 
-  <div class="wrapper">
-    <div class="page-header page-header-small">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/geek.jpg');">
+  <div class="wrapper ">
+    <div class="page-header page-header-small ">
+      <div class="page-header-image " data-parallax="true " style="background-image: url( '../assets/img/geek.jpg'); ">
       </div>
-      <div class="container">
-        <div class="content-center">
-<<<<<<< HEAD
-          <h1 class="title">This is our great company.</h1>
-
-=======
-          <h1 class="title">Education is the premise of the progress</h1>
->>>>>>> 0438ed4123048c3473808144ae29d605b87dfc09
+      <div class="container ">
+        <div class="content-center ">
+          <h1 class="title ">Education is the premise of the progress</h1>
         </div>
       </div>
     </div>
-    <div class="section section-about-us">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 ml-auto mr-auto text-center">
-            <h2 class="title">About</h2>
-            <h5 class="description">The GeekTeq is a web-based application to learn skills that you need for technical jobs. It helps you polish your skills and get ready for the job, whether you are a fresh college graduate or a working professional. This innovative system allows college faculty to share assignments and interview mock tests with engineering students.</h5>
+    <div class="section section-about-us ">
+      <div class="container ">
+        <div class="row ">
+          <div class="col-md-8 ml-auto mr-auto text-center ">
+            <h2 class="title ">About</h2>
+            <h5 class="description ">The GeekTeq is a web-based application to learn skills that you need for technical jobs. It helps you polish your skills and get ready for the job, whether you are a fresh college graduate or a working professional. This innovative system allows college faculty to share assignments and interview mock tests with engineering students.</h5>
           </div>
         </div>
-        <div class="separator separator-primary"></div>
-        <div class="section-story-overview">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="image-container image-left" style="background-image: url('../assets/img/login.jpg')">
+        <div class="separator separator-primary "></div>
+        <div class="section-story-overview ">
+          <div class="row ">
+            <div class="col-md-6 ">
+              <div class="image-container image-left " style="background-image: url( '../assets/img/login.jpg') ">
                 <!-- First image on the left side -->
-                <p class="blockquote blockquote-primary">"Over the span of the academic record, learning things on interactive platform gives advancement to placement and student intractability"
+                <p class="blockquote blockquote-primary ">"Over the span of the academic record, learning things on interactive platform gives advancement to placement and student intractability "
                   <br>
                   <br>
                 </p>
               </div>
               <!-- Second image on the left side of the article -->
-              <div class="image-container" style="background-image: url('../assets/img/slide.jpg')"></div>
+              <div class="image-container " style="background-image: url( '../assets/img/slide.jpg') "></div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 ">
               <!-- First image on the right side, above the article -->
-              <div class="image-container image-right" style="background-image: url('../assets/img/img2.jpg')"></div>
+              <div class="image-container image-right " style="background-image: url( '../assets/img/img2.jpg') "></div>
               <h3>So what this platform is all about</h3>
               <p>The Arctic Ocean freezes every winter and much of the sea-ice then thaws every summer, and that process will continue whatever happens with climate change. Even if the Arctic continues to be one of the fastest-warming regions of the world,
                 it will always be plunged into bitterly cold polar dark every winter. And year-by-year, for all kinds of natural reasons, there’s huge variety of the state of the ice.
@@ -224,78 +218,78 @@
       </div>
     </div>
 
-    <div class="section section-contact-us text-center">
-      <div class="container">
-        <h2 class="title">Want to work?</h2>
-        <p class="description">Register here to connect and learn.</p>
-        <div class="row">
-          <div class="col-lg-6 text-center col-md-8 ml-auto mr-auto">
-            <div class="input-group input-lg">
-              <span class="input-group-addon">
-                              <i class="now-ui-icons users_circle-08"></i>
+    <div class="section section-contact-us text-center ">
+      <div class="container ">
+        <h2 class="title ">Want to work?</h2>
+        <p class="description ">Register here to connect and learn.</p>
+        <div class="row ">
+          <div class="col-lg-6 text-center col-md-8 ml-auto mr-auto ">
+            <div class="input-group input-lg ">
+              <span class="input-group-addon ">
+                              <i class="now-ui-icons users_circle-08 "></i>
                           </span>
-              <input type="text" class="form-control" placeholder="First Name...">
+              <input type="text " class="form-control " placeholder="First Name... ">
             </div>
-            <div class="input-group input-lg">
-              <span class="input-group-addon">
-                              <i class="now-ui-icons ui-1_email-85"></i>
+            <div class="input-group input-lg ">
+              <span class="input-group-addon ">
+                              <i class="now-ui-icons ui-1_email-85 "></i>
                           </span>
-              <input type="text" class="form-control" placeholder="Email...">
+              <input type="text " class="form-control " placeholder="Email... ">
             </div>
-            <div class="send-button">
-              <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Register</a>
+            <div class="send-button ">
+              <a href="#pablo " class="btn btn-primary btn-round btn-block btn-lg ">Register</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <footer class="footer footer-default">
-      <div class="container">
+    <footer class="footer footer-default ">
+      <div class="container ">
         <nav>
           <ul>
             <li>
-              <a href="http://presentation.creative-tim.com">
+              <a href="http://presentation.creative-tim.com ">
                               About Us
                           </a>
-            </li>           
+            </li>
           </ul>
         </nav>
-        <div class="copyright">
+        <div class="copyright ">
           &copy;
           <script>
             document.write(new Date().getFullYear())
           </script>, Designed and Coded by
-          <a href="#ranu" target="_blank">Ranu Singhal </a>
+          <a href="#ranu " target="_blank ">Ranu Singhal </a>
         </div>
       </div>
     </footer>
   </div>
 </body>
 <!--   Core JS Files   -->
-<script src="../assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
-<script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+<script src="../assets/js/core/jquery.3.2.1.min.js " type="text/javascript "></script>
+<script src="../assets/js/core/popper.min.js " type="text/javascript "></script>
+<script src="../assets/js/core/bootstrap.min.js " type="text/javascript "></script>
 <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="../assets/js/plugins/bootstrap-switch.js"></script>
+<script src="../assets/js/plugins/bootstrap-switch.js "></script>
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<script src="../assets/js/plugins/nouislider.min.js " type="text/javascript "></script>
 <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-<script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="../assets/js/plugins/bootstrap-datepicker.js " type="text/javascript "></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-<script src="../assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
+<script src="../assets/js/now-ui-kit.js?v=1.1.0 " type="text/javascript "></script>
 <script>
   var header_height;
   var fixed_section;
   var floating = false;
 
   $(document).ready(function() {
-    suggestions_distance = $("#suggestions").offset();
+    suggestions_distance = $("#suggestions ").offset();
     pay_height = $('.fixed-section').outerHeight();
 
     $(window).on('scroll', nowuiKit.checkScrollForTransparentNavbar);
 
     if ($(window).width() >= 768) {
-      big_image = $('.header[data-parallax="true"]');
+      big_image = $('.header[data-parallax="true "]');
       if (big_image.length != 0) {
         $(window).on('scroll', nowuiKitDemo.checkScrollForParallax);
       }
